# Chotgor

./: .env.example  .gitignore  CLAUDE.md  DEAR_GHOST.md  Dockerfile  README.md  backend_data_design.md  docker-compose.yml  issue13.json  issue14.json  issue15.json  memory_recall_algorithm.md  pyproject.toml  rerun.bat  run.bat  setup_qwen3.bat
backend/: main.py  mcp_server.py  mcp_test_server.py
docs/: README.md  aliveness_plan.md  character_resident_rules.md  fable_view.md  prompt_cache_plan.md  schedule_plan.md  usual_days_plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: backfill_chat_index.py  migrate_chroma_to_lance.py  poc_lancedb.py
tests/: _farewell_helpers.py  _ghost_model_helpers.py  _logs_ui_helpers.py  _scenario_api_helpers.py  _scenario_sqlite_helpers.py  _self_reflection_helpers.py  _switch_angle_helpers.py  conftest.py  test_actions.py  test_afterglow.py  test_allowed_tools.py  test_anticipator.py  test_carver.py  test_character_delete_cascade.py  test_character_query.py  test_chat_api.py  test_chat_indexer.py  test_chat_service.py  test_chroma_store.py  test_chroma_store_concurrency.py  test_chronicle_flags.py  test_chronicle_memories.py  test_chronicle_trpg.py  test_chronicle_usual_days.py  test_claude_cli_format.py  test_claude_multimodal.py  test_content.py  test_context_tools.py  test_debug_log_store.py  test_drift_service.py  test_drift_system_prompt.py  test_drifter.py  test_escrow_delivery.py  test_exiter.py  test_face_to_face.py  test_farewell_chronicle.py  test_farewell_service.py  (+89 more)
(+315 files in other folders)
