[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chotgor-backend"
version = "0.1.0"
description = "Chotgor AI character memory management backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
